<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:paddingLeft="@dimen/login_info_horiz_padding"
    android:paddingRight="@dimen/login_info_horiz_padding"
    android:background="@drawable/login_background_layers">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:src="@drawable/logo"/>
    <RelativeLayout
        android:id="@+id/rlPhone"
        android:layout_below="@id/ivLogo"
        android:layout_marginTop="@dimen/login_phone_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivPhoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_phoneicon_horiz_margin"
            android:src="@drawable/ic_phone"/>
        <AutoCompleteTextView
            android:id="@+id/etPhoneNumber"
            android:layout_toRightOf="@id/ivPhoneIcon"
            android:layout_marginLeft="@dimen/login_phonenumber_horiz_margin"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PhoneNumberETStyle"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tvSmsSent"
        android:layout_below="@id/rlPhone"
        android:layout_marginTop="@dimen/register_smssenttext_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smssent_text"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/btSendSms"
        android:layout_below="@id/tvSmsSent"
        android:layout_marginTop="@dimen/register_sendsmsbutton_top_margin"
        style="@style/NormalButtonStyle"
        android:text="@string/sendsms_button_text"
        android:enabled="false"/>
    <RelativeLayout
        android:id="@+id/rlSms"
        android:layout_below="@id/btSendSms"
        android:layout_marginTop="@dimen/register_smscode_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivSmsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_phoneicon_horiz_margin"
            android:src="@drawable/ic_textsms"/>
        <EditText
            android:id="@+id/etSmsCode"
            android:layout_toRightOf="@id/ivSmsIcon"
            android:layout_marginLeft="@dimen/login_phonenumber_horiz_margin"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PasswordETStyle"
            android:inputType="numberDecimal"
            android:focusableInTouchMode="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btConfirmSmsCode"
        android:layout_below="@id/rlSms"
        android:layout_marginTop="@dimen/register_confirmcodebutton_top_margin"
        style="@style/AccentButtonStyle"
        android:text="@string/confirm_button_text"
        android:enabled="false"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/tvUserAgreement"
        android:layout_below="@id/btConfirmSmsCode"
        android:layout_marginTop="@dimen/register_useragreementtext_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        style="@style/UserAgreementTextStyle"
        android:text="@string/useragreement_text"/>
    <TextView
        android:id="@+id/tvUserAgreementLink1"
        android:layout_below="@id/tvUserAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        style="@style/UserAgreementTextStyle"
        android:text="@string/useragreement_link1"/>
    <TextView
        android:id="@+id/tvUserAgreementLink2"
        android:layout_below="@id/tvUserAgreementLink1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        style="@style/UserAgreementTextStyle"
        android:text="@string/useragreement_link2"/>
</RelativeLayout>