<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:fitsSystemWindows="true"
    android:paddingLeft="@dimen/login_info_horiz_padding"
    android:paddingRight="@dimen/login_info_horiz_padding"
    android:background="@drawable/login_background_layers">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:src="@drawable/logo"/>
    <RelativeLayout
        android:id="@+id/rlPhone"
        android:layout_below="@id/ivLogo"
        android:layout_marginTop="@dimen/login_phone_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivPhoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_phoneicon_horiz_margin"
            android:src="@drawable/ic_phone"/>
        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_toRightOf="@id/ivPhoneIcon"
            android:layout_marginLeft="@dimen/login_phonenumber_horiz_margin"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PhoneNumberETStyle"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlPassword"
        android:layout_below="@id/rlPhone"
        android:layout_marginTop="@dimen/login_password_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivLockIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_phoneicon_horiz_margin"
            android:src="@drawable/ic_lock"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_toRightOf="@id/ivLockIcon"
            android:layout_marginLeft="@dimen/login_phonenumber_horiz_margin"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            style="@style/PasswordETStyle"/>
        <ToggleButton
            android:id="@+id/tbtShowPassword"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            style="@style/ToggleButtonStyle"/>
    </RelativeLayout>
    <View
        android:layout_below="@id/rlPassword"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryTransparent"/>
    <RelativeLayout
        android:id="@+id/rlForgetRemember"
        android:layout_below="@id/rlPassword"
        android:layout_marginTop="@dimen/login_forgetremember_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tvForgetLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/forget_password"/>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/swRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:switchPadding="@dimen/login_rememberswitch_padding"
            android:text="@string/remember_me"
            android:textStyle="bold"
            style="@style/LoginTextStyle"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_below="@id/rlForgetRemember"
        android:layout_marginTop="@dimen/login_loginbutton_top_margin"
        android:layout_centerHorizontal="true"
        style="@style/NormalButtonStyle"
        android:enabled="false"
        android:text="@string/login_button_text"/>

    <Button
        android:id="@+id/btRegister"
        android:layout_below="@id/btLogin"
        android:layout_marginTop="@dimen/startbutton_bottom_margin"
        android:layout_centerHorizontal="true"
        style="@style/AccentButtonStyle"
        android:text="@string/register_button_text"/>

</RelativeLayout>