<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity"
    android:paddingLeft="@dimen/login_info_horiz_padding"
    android:paddingRight="@dimen/login_info_horiz_padding"
    android:background="@drawable/login_background_layers">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:src="@drawable/logo"/>
    <RelativeLayout
        android:id="@+id/rlPassword1"
        android:layout_below="@id/ivLogo"
        android:layout_marginTop="@dimen/login_password_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivLockIcon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_phoneicon_horiz_margin"
            android:src="@drawable/ic_lock"/>
        <EditText
            android:id="@+id/etPassword1"
            android:layout_toRightOf="@id/ivLockIcon1"
            android:layout_marginLeft="@dimen/login_phonenumber_horiz_margin"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_newpassword"
            style="@style/PasswordETStyle"/>
        <ToggleButton
            android:id="@+id/tbtShowPassword1"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            style="@style/ToggleButtonStyle"/>
        <ImageView
            android:id="@+id/ivCheckDoneIcon1"
            android:layout_toLeftOf="@id/tbtShowPassword1"
            android:layout_marginRight="@dimen/password_validsign_horiz_margin"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_green_18dp"
            android:visibility="gone"/>
    </RelativeLayout>
    <View
        android:layout_below="@id/rlPassword1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryTransparent"/>
    <RelativeLayout
        android:id="@+id/rlPassword2"
        android:layout_below="@id/rlPassword1"
        android:layout_marginTop="@dimen/login_password_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivLockIcon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_phoneicon_horiz_margin"
            android:src="@drawable/ic_lock"/>
        <EditText
            android:id="@+id/etPassword2"
            android:layout_toRightOf="@id/ivLockIcon2"
            android:layout_marginLeft="@dimen/login_phonenumber_horiz_margin"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_repeat_newpassword"
            style="@style/PasswordETStyle"/>
        <ToggleButton
            android:id="@+id/tbtShowPassword2"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            style="@style/ToggleButtonStyle"/>
        <ImageView
            android:id="@+id/ivCheckDoneIcon2"
            android:layout_toLeftOf="@id/tbtShowPassword2"
            android:layout_marginRight="@dimen/password_validsign_horiz_margin"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_green_18dp"
            android:visibility="gone"/>
    </RelativeLayout>
    <View
        android:layout_below="@id/rlPassword2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryTransparent"/>
    <Button
        android:id="@+id/btSendPassword"
        android:layout_below="@id/rlPassword2"
        android:layout_marginTop="@dimen/login_loginbutton_top_margin"
        style="@style/AccentButtonStyle"
        android:text="@string/send_button_text"/>
</RelativeLayout>